Changed tag extension to html to enable highlighting on github.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body {
-  font-family: sans-serif;
-  font-size: 18px;
   margin: 20px;
+  color: #212121;
+  font-family: "Helvetica Neue", "Calibri Light", Roboto, sans-serif;
+  font-size: 18px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  letter-spacing: 0.02em;
 }
